--- a/app/src/styles/views/_game.scss
+++ b/app/src/styles/views/_game.scss
@@ -55,7 +55,7 @@
 
 .c-pokemon-info {
     width: 40%;
-    height: 50%;
+    height: fit-content;
     background-color: var(--color-sand-light);
     color: var(--color-blue);
     border: var(--size-sm) solid var(--color-sand);
